docs/pylit.css
html {
  font-size: 62.5%;
}

body {
  font-size: 1.5em;
  line-height: 1.6;
  font-weight: 400;
  font-family: "SF Pro Text", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
  color: #999;
  margin: 0;
  padding: 0;
  background: #282a36;
}

hr {
  border-color: #555;
  border-style: solid;
  border-bottom: none;
}

pre > code {
  display: block;
  padding: 1rem 1.5rem;
  white-space: pre;
}

a {
  color: #bbb;
}

a:visited {
  color: #aaa;
}

p {
  margin: 0 0 10px 0;
}

h1, h2, h3, h4, h5, h6 {
  margin: 40px 0 15px 0;
}

h2, h3, h4, h5, h6 {
  margin-top: 0;
}

#container {
  background: #1d2127;
  position: relative;
}

div.section {
  position: relative;
  border-top: 1px solid #353745;
}

#background {
  position: absolute;
  top: 0;
  left: 40%;
  right: 0;
  bottom: 0;
  background: #282a36;
  /*#1d2127;*/
  border-left: 1px solid #293340;
  z-index: 0;
  display: none;
}
@media (min-width: 768px) {
  #background {
    display: block;
  }
}

a.parent {
  text-transform: uppercase;
  font-weight: bold;
  font-size: 12px;
  margin-right: 10px;
  color: white;
  text-decoration: none;
}

a.parent:after {
  content: ">";
  font-size: 14px;
  margin-left: 4px;
  color: #aaa;
}

div.section:after {
  clear: both;
  content: "";
  display: block;
}
div.section:hover {
  background: #080a16;
}
div.section:hover div.docs .section-link a {
  opacity: 1;
}
div.section:hover div.code {
  background: #080a16;
}
div.section div.docs {
  box-sizing: border-box;
  padding: 10px 8px 1px 8px;
  vertical-align: top;
  text-align: left;
}
@media (min-width: 768px) {
  div.section div.docs {
    float: left;
    width: 40%;
    min-height: 5px;
  }
}
@media (min-width: 1024px) {
  div.section div.docs {
    padding: 10px 25px 1px 50px;
  }
}
div.section div.docs .section-link {
  position: relative;
}
div.section div.docs .section-link a {
  font: 12px Arial;
  text-decoration: none;
  color: #454545;
  position: absolute;
  top: 3px;
  left: -20px;
  padding: 1px 2px;
  opacity: 0;
  -webkit-transition: opacity 0.2s linear;
}
div.section div.docs p .MathJax_Display {
  overflow-x: auto;
  overflow-y: hidden;
}
div.section div.docs pre code {
  overflow-x: auto;
}
div.section div.docs img {
  max-width: 100%;
}
div.section div.code {
  background: #282a36;
  /*#1d2127;*/
  padding: 14px 8px 16px 15px;
  vertical-align: top;
}
@media (min-width: 768px) {
  div.section div.code {
    margin-left: 40%;
  }
}
div.section div.code pre {
  font-size: 12px;
  word-break: break-all;
  white-space: pre-wrap;
}

div.doc-strings {
  color: #ccc;
}

.docs pre {
  margin: 15px 0 15px;
}

.docs p tt,
.docs li code,
.docs ol code,
.docs p code {
  background: #282a36;
  border: none;
  border-radius: 1px;
  font-size: 12px;
  padding: 0 0.2em;
  color: #ccc;
}

.mjx-chtml {
  color: #ccc;
}

code {
  padding: 0.2rem 0.5rem;
  margin: 0 0.2rem;
  font-size: 80%;
  white-space: nowrap;
  background: #282a36;
  border: 1px solid #484a56;
  border-radius: 4px;
}

pre, tt, code {
  line-height: 18px;
  font-family: Monaco, Consolas, "Lucida Console", monospace;
  margin: 0;
  padding: 0;
}

span.lineno {
  display: inline-block;
  text-align: right;
  padding-right: 10px;
  opacity: 0.3;
  font-size: 10px;
}

.highlight {
  color: #f8f8f2;
}
.highlight .hll {
  background-color: #f1fa8c;
}
.highlight .c {
  color: #6272a4;
}
.highlight .err {
  color: #f8f8f2;
}
.highlight .g {
  color: #f8f8f2;
}
.highlight .k {
  color: #ff79c6;
}
.highlight .l {
  color: #f8f8f2;
}
.highlight .n {
  color: #f8f8f2;
}
.highlight .o {
  color: #ff4996;
}
.highlight .x {
  color: #f8f8f2;
}
.highlight .p {
  color: #a8a8a2;
}
.highlight .ch {
  color: #6272a4;
}
.highlight .cm {
  color: #6272a4;
}
.highlight .cp {
  color: #ff79c6;
}
.highlight .cpf {
  color: #6272a4;
}
.highlight .c1 {
  color: #6272a4;
}
.highlight .cs {
  color: #6272a4;
}
.highlight .gd {
  color: #8b080b;
}
.highlight .ge {
  color: #f8f8f2;
  text-decoration: underline;
}
.highlight .gr {
  color: #f8f8f2;
}
.highlight .gh {
  color: #f8f8f2;
  font-weight: bold;
}
.highlight .gi {
  color: #f8f8f2;
  font-weight: bold;
}
.highlight .go {
  color: #44475a;
}
.highlight .gp {
  color: #f8f8f2;
}
.highlight .gs {
  color: #f8f8f2;
}
.highlight .gu {
  color: #f8f8f2;
  font-weight: bold;
}
.highlight .gt {
  color: #f8f8f2;
}
.highlight .kc {
  color: #ff79c6;
}
.highlight .kd {
  color: #8be9fd;
  font-style: italic;
}
.highlight .kn {
  color: #ff79c6;
}
.highlight .kp {
  color: #ff79c6;
}
.highlight .kr {
  color: #ff79c6;
}
.highlight .kt {
  color: #8be9fd;
}
.highlight .ld {
  color: #f8f8f2;
}
.highlight .m {
  color: #bd93f9;
}
.highlight .s {
  color: #f1fa8c;
}
.highlight .na {
  color: #50fa7b;
}
.highlight .nb {
  color: #8be9fd;
  font-style: italic;
}
.highlight .nc {
  color: #ffb86c;
  font-weight: bold;
}
.highlight .no {
  color: #f8f8f2;
}
.highlight .nd {
  color: #9d93ff;
}
.highlight .ni {
  color: #f8f8f2;
}
.highlight .ne {
  color: #d8d8d2;
  font-style: italic;
}
.highlight .nf {
  color: #ffb86c;
}
.highlight .nl {
  color: #8be9fd;
  font-style: italic;
}
.highlight .nn {
  color: #f8f8f2;
}
.highlight .nx {
  color: #f8f8f2;
}
.highlight .py {
  color: #f8f8f2;
}
.highlight .nt {
  color: #ff79c6;
}
.highlight .nv {
  color: #8be9fd;
  font-style: italic;
}
.highlight .ow {
  color: #ff79c6;
}
.highlight .w {
  color: #f8f8f2;
}
.highlight .mb {
  color: #bd93f9;
}
.highlight .mf {
  color: #bd93f9;
}
.highlight .mh {
  color: #bd93f9;
}
.highlight .mi {
  color: #bd93f9;
}
.highlight .mo {
  color: #bd93f9;
}
.highlight .sa {
  color: #f1fa8c;
}
.highlight .sb {
  color: #f1fa8c;
}
.highlight .sc {
  color: #f1fa8c;
}
.highlight .dl {
  color: #f1fa8c;
}
.highlight .sd {
  color: #f1fa8c;
}
.highlight .s2 {
  color: #f1fa8c;
}
.highlight .se {
  color: #f1fa8c;
}
.highlight .sh {
  color: #f1fa8c;
}
.highlight .si {
  color: #f1fa8c;
}
.highlight .sx {
  color: #f1fa8c;
}
.highlight .sr {
  color: #f1fa8c;
}
.highlight .s1 {
  color: #f1fa8c;
}
.highlight .ss {
  color: #f1fa8c;
}
.highlight .bp {
  color: #50fa7b;
}
.highlight .fm {
  color: #ffb86c;
  font-style: italic;
}
.highlight .vc {
  color: #8be9fd;
  font-style: italic;
}
.highlight .vg {
  color: #8be9fd;
  font-style: italic;
}
.highlight .vi {
  color: #8be9fd;
  font-style: italic;
}
.highlight .vm {
  color: #8be9fd;
  font-style: italic;
}
.highlight .il {
  color: #bd93f9;
}

p > img {
  max-height: 240px;
  max-width: 240px;
  border-radius: 5px;
  cursor: pointer;
  transition: 0.3s;
}
p > img:hover {
  opacity: 0.7;
}

#modal {
  position: fixed;
  z-index: 1000;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  overflow: scroll;
  background-color: rgba(0, 0, 0, 0.9);
}
#modal > div {
  padding: 100px 10px 10px 10px;
}
#modal > div > img {
  margin: auto;
  display: block;
  width: 80%;
  max-width: 700px;
}
#modal > div > p {
  margin: auto;
  display: block;
  width: 80%;
  max-width: 700px;
  text-align: center;
  color: #ccc;
  padding: 10px 0;
  height: 150px;
}
#modal > div > img, #modal > div > p {
  animation-name: zoom;
  animation-duration: 0.6s;
}
@keyframes zoom {
  from {
    transform: scale(0);
  }
  to {
    transform: scale(1);
  }
}
#modal > span.close {
  position: absolute;
  top: 15px;
  right: 35px;
  color: #f1f1f1;
  font-size: 40px;
  font-weight: bold;
  transition: 0.3s;
}
#modal > span.close:hover, #modal > span.close:focus {
  color: #bbb;
  text-decoration: none;
  cursor: pointer;
}

@media only screen and (max-width: 700px) {
  #modal > img {
    width: 100%;
  }
}

/*# sourceMappingURL=pylit.css.map */

